<resources>

    <string name="app_name" translatable="false">Oledify</string>
    <string name="language">en</string>

    <!-- three dots menu -->
    <string name="settings">Settings</string>
    <string name="change_language">Change language</string>
    <string name="about">About</string>

    <!-- about menu -->
    <string name="about_title">About Oledify</string>
    <string name="version">App version</string>
    <string name="licences_title">Open Source Licences:</string>
    <string name="source">source</string>
    <string name="licence">licence</string>

    <!-- loading screen -->
    <string name="gallery_loading">Refreshing Gallery...</string>
    <string name="saving_loading">Saving...</string>

    <!-- gallery image preview -->
    <string name="set_as_wallpaper">set as wallpaper</string>
    <string name="delete">delete</string>
    <string name="wallpaper_set">Wallpaper Set Successfully!</string>

    <!-- wallpaper fragment -->
    <string name="wallpaper_home">home screen</string>
    <string name="wallpaper_lock">lock screen</string>

    <!-- bottom navigation view menu -->
    <string name="gallery">Gallery</string>
    <string name="editing">Editing</string>

    <!-- settings screen -->
    <string name="tone_curve">Tone Curve (recommended)</string>
    <string name="image_processing">Image Processing</string>
    <string name="real_time_processing">Real Time Processing</string>
    <string name="RGB_sliders">RGB Sliders</string>
    <string name="high_res">High Resolution Preview</string>
    <string name="column_count">Column Count</string>
    <string name="other">Other</string>
    <string name="theme">Theme</string>

    <!-- main activity -->
    <string name="upload_image">upload an image</string>
    <string name="trick">do the trick</string>
    <string name="clear">clear</string>
    <string name="choose_image">choose image</string>

    <!-- edit activity -->
    <string name="save">save</string>

    <!-- snackbar messages -->
    <string name="saved">Image saved successfully!</string>
    <string name="error_message">Something went wrong!</string>
    <string name="no_permissions">Permissions not granted!</string>

    <!-- welcome fragment -->
    <string name="welcome_title">Welcome to Oledify!</string>
    <string name="welcome_description">Thank you for choosing Oledify!
        This app will help you pimp your wallpapers the simplest way possible.
        Enjoy!</string>
    <string name="ok" translatable="false">OK</string>

    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>

</resources>
