<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item android:id="@+id/switchEditing"
            android:icon="@drawable/ic_edit"
            android:checked="true"
            android:title="@string/editing"/>

        <item android:id="@+id/switchGallery"
            android:icon="@drawable/ic_gallery"
            android:title="@string/gallery"/>

    </group>

    <item android:title="@string/settings">

        <menu>
            <item android:id="@+id/language"
                    android:icon="@drawable/ic_language"
                    android:title="@string/change_language"/>

            <item android:id="@+id/processingSettings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/processing_settings"/>
        </menu>

    </item>

</menu>