<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorAccent">

    <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/welcome_title"
            android:textSize="30sp"
            android:textColor="#ffffff"
            android:layout_margin="16dp">
    </android.support.v7.widget.AppCompatTextView>

    <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/welcome_description"
            android:textColor="#EEEEEE"
            android:layout_margin="16dp">
    </android.support.v7.widget.AppCompatTextView>

    <android.support.v7.widget.AppCompatButton
            android:id="@+id/okButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:text="@string/ok">
    </android.support.v7.widget.AppCompatButton>

</android.support.v7.widget.LinearLayoutCompat>