<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/settingsFragment"
        android:background="@color/colorPrimaryLight">

    <android.support.v7.widget.AppCompatTextView
            android:id="@+id/title"
            style="@style/TextHuge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/settings"/>

    <android.support.v7.widget.AppCompatTextView
            android:id="@+id/real"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/real_time_processing"
            style="@style/TextSemiBold"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintLeft_toLeftOf="parent"/>

    <android.support.v7.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/real"
            app:layout_constraintTop_toTopOf="@+id/real"
            android:layout_marginStart="16dp"/>

    <android.support.v7.widget.AppCompatTextView
            android:id="@+id/sliders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RGB_sliders"
            style="@style/TextSemiBold"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/real"
            app:layout_constraintLeft_toLeftOf="parent"/>

    <android.support.v7.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/sliders"
            app:layout_constraintTop_toTopOf="@+id/sliders"
            android:layout_marginStart="16dp"/>

    <android.support.v7.widget.AppCompatTextView
            android:id="@+id/highRes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_res"
            style="@style/TextSemiBold"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/sliders"
            app:layout_constraintLeft_toLeftOf="parent"/>

    <android.support.v7.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/highRes"
            app:layout_constraintTop_toTopOf="@+id/highRes"
            android:layout_marginStart="16dp"/>

</android.support.constraint.ConstraintLayout>